--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@modelcontextprotocol/sdk": "^1.17.3",
     "dotenv": "^17.2.1",
     "googleapis": "^156.0.0",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
